--- a/vercel.json
+++ b/vercel.json
@@ -22,14 +22,14 @@
   ],
   "env": {
     "APP_ENV": "production",
-    "APP_KEY": "your-app-key",
-    "APP_URL": "https://your-vercel-domain.vercel.app",
+    "APP_KEY": "APP_KEY=base64:SF2/YC5Le4t4J3lLCnupdUlAwoRGBYTUdYHxQHQa/38=",
+    "APP_URL": "https://education-platform-murex-five.vercel.app",
     "APP_DEBUG": "false",
     "DB_CONNECTION": "pgsql",
     "DB_HOST": "your-postgres-host",
     "DB_PORT": "5432",
-    "DB_DATABASE": "your-database-name",
-    "DB_USERNAME": "your-database-user",
-    "DB_PASSWORD": "your-database-password"
+    "DB_DATABASE": "education_platform",
+    "DB_USERNAME": "postgres",
+    "DB_PASSWORD": "andre123"
   }
 }
