--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "public/index.php",
-      "use": "@vercel/php"
+     "functions": {
+        "api/index.php": {
+          "runtime": "vercel-php@0.6.0"
+        }
     },
-    {
-      "src": "public/build/**/*",
-      "use": "@vercel/static"
-    }
-  ],
   "routes": [
         {
             "src": "/(.*)",
