--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,7 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://education-platform-murex-five.vercel.app/",
+        "APP_KEY": "base64:KWiEc2yNuSUGzkNYrBVOUmEtSVTdinvQ7SF6PPruZa8=",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
@@ -27,7 +28,14 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "DB_URL": "postgresql://educationplatform_acresnoton:9d565d8f12379be74fcd3cadc8ae1ba11aafb179@limu5j.h.filess.io:5434/educationplatform_acresnoton",
+        "DB_HOST": "limu5j.h.filess.io",
+        "DB_PORT": "5434",
+        "DB_DATABASE": "educationplatform_acresnoton",
+        "DB_USERNAME": "educationplatform_acresnoton",
+        "DB_PASSWORD": "9d565d8f12379be74fcd3cadc8ae1ba11aafb179",
+        "DB_SCHEMA": "laravel"
     },
     "outputDirectory": "public"
 }
