--- a/vercel.json
+++ b/vercel.json
@@ -29,7 +29,7 @@
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie",
-        "DB_URL": "postgresql://educationplatform_acresnoton:9d565d8f12379be74fcd3cadc8ae1ba11aafb179@limu5j.h.filess.io:5434/educationplatform_acresnoton",
+        "DB_URL": "postgresql://educationplatform_acresnoton:9d565d8f12379be74fcd3cadc8ae1ba11aafb179@limu5j.h.filess.io:5434/educationplatform_acresnoton?search_path=laravel",
         "DB_HOST": "limu5j.h.filess.io",
         "DB_PORT": "5434",
         "DB_DATABASE": "educationplatform_acresnoton",
