--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "public/index.php",
+            "use": "@vercel/php"
+        },
+        {
+            "src": "public/build/**/*",
+            "use": "@vercel/static"
+        }
+    ],
     "functions": {
         "api/index.php": {
             "runtime": "vercel-php@0.6.0"
@@ -13,7 +23,15 @@
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
+        },
+        {
+            "src": "/build/(.*)",
+            "dest": "/public/build/$1",
+            "headers": {
+                "Cache-Control": "public, max-age=31536000, immutable"
+            }
         }
+        
     ],
     "env": {
         "APP_ENV": "production",
