--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,10 @@
             "headers": {
                 "Cache-Control": "public, max-age=31536000, immutable"
             }
+        },
+        {
+            "src": "/assets/(.*)",
+            "dest": "/public/assets/"
         }
         
     ],
