--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
         },
         { "src": "/(css|js|images|build)/(.*)", 
          "dest": "/public/$1/$2" 
+        },
+        {
+            "src": "/build/(.*)",
+            "dest": "/build/$1"
         }
     ],
     "env": {
