--- a/vercel.json
+++ b/vercel.json
@@ -18,7 +18,7 @@
          "dest": "/public/$1/$2" 
         },
         {
-            "src": "/build/(.*)",
+            "src": "/build/.vite/(.*)",
             "dest": "/build/$1"
         },
         { 
