--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,10 @@
         { 
             "src": "/(.*\\.(?:css|js|png|jpg|jpeg|gif|svg|ico|ttf|woff|woff2|eot|otf|webp|avif|txt))$",
             "dest": "/public/$1"
+        },
+        {
+        "src": "/build/(.*)",
+        "dest": "/public/build/$1"
         }
 
     ],
