--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,10 @@
         {
         "src": "/build/(.*)",
         "dest": "/public/build/$1"
+        },
+        {
+            "src":"/public/storage/(.*)",
+            "dest": "/storage/app/public/$1"
         }
 
     ],
