--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,13 @@
     },
     "routes": [
         {
+            "src": "/build/assets/(.*)",
+            "dest": "/public/build/assets/$1",
+            "headers": {
+            "Cache-Control": "public, max-age=31536000, immutable"
+          }
+        },
+        {
             "src": "/img/(.*)",
             "dest": "/public/img/"
         },
