--- a/vercel.json
+++ b/vercel.json
@@ -41,8 +41,8 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://education-platform-murex-five.vercel.app/",
-        "APP_KEY": "base64:KWiEc2yNuSUGzkNYrBVOUmEtSVTdinvQ7SF6PPruZa8=",
+        "APP_URL": "",
+        "APP_KEY": "",
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
